--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 /* ============= */
 /* Font families */
 /* ============= */
-
 body {
 	font-family: 'Arial';
 }
@@ -38,14 +37,26 @@ h1, h2 {
 }
 
 img {
-	max-width: 100%;
+	/*max-width: 100%;
+	max-height: 100%;*/
+	/*width: 100%;*/
 	page-break-inside: avoid;
 	break-inside: avoid;
-	/*page-break-before: always;*/
+	page-break-before: always;
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
+	/*position: absolute;*/
+	top: 0px;
+	left: 0px;
+	width: 100vw;
+	height: 100vh;
+	object-fit: cover;
+	object-position: center;
+	/*max-width: 100%;
+	/*height: 100%;
+	width: 100%;
+	object-fit: cover;*/
+	/*margin-left: auto;
+	margin-right: auto;*/}
 
 body {
 	-webkit-print-color-adjust: exact;
