--- a/styles.css
+++ b/styles.css
@@ -37,26 +37,16 @@ h1, h2 {
 }
 
 img {
-	/*max-width: 100%;
-	max-height: 100%;*/
-	/*width: 100%;*/
 	page-break-inside: avoid;
 	break-inside: avoid;
 	page-break-before: always;
 	display: block;
-	/*position: absolute;*/
-	top: 0px;
-	left: 0px;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
 	object-fit: cover;
 	object-position: center;
-	/*max-width: 100%;
-	/*height: 100%;
-	width: 100%;
-	object-fit: cover;*/
-	/*margin-left: auto;
-	margin-right: auto;*/}
+	margin-top: auto;
+	margin-bottom: auto;*/
+}
 
 body {
 	-webkit-print-color-adjust: exact;
